<resources>
    <string name="app_name">Eventos</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="data">Data</string>
    <string name="valor">Valor</string>
    <string name="vagas">Vagas</string>
    <string name="local">Local</string>
    <string name="cifras">R$</string>
    <string name="vagasmin">vagas</string>
    <string name="email">Email</string>




</resources>
